--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "autoresearch"
-version = "0.1.0a1" # keep in sync with autoresearch.__version__
+version = "0.1.0" # keep in sync with autoresearch.__version__
 description = "Local-first research assistant coordinating agents for evidence-backed answers."
 authors = [
     {name = "Caitlyn O'Hanna",email = "caitlyn.ohanna@gmail.com"}
@@ -46,6 +46,7 @@ dependencies = [
     "setuptools >=80.9.0,<81",
     "owlrl >=7.1.4",
     "build>=1.3.0",
+    "pip-audit>=2.9.0",
 ]
 
 classifiers = [
@@ -55,7 +56,7 @@ classifiers = [
 ]
 
 [tool.autoresearch]
-release_date = "2025-10-16" # keep in sync with autoresearch.__release_date__
+release_date = "2025-10-17" # keep in sync with autoresearch.__release_date__
 
 [tool.setuptools]
 include-package-data = true
