--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
     "owlrl >=7.1.4",
     "build>=1.3.0",
     "pip-audit>=2.9.0",
+    "PySide6>=6.6.0",
+    "matplotlib>=3.10.7",
 ]
 
 classifiers = [
@@ -91,7 +93,14 @@ gpu = [
     "scipy >=1.16.0",
     "lmstudio >=1.4.1"
 ]
-# UI features: Streamlit-based user interface
+# Desktop UI: PySide6-based native desktop interface
+desktop = [
+    "PySide6 >=6.6.0",
+    "markdown >=3.5.0",
+    "networkx >=3.2.0",
+    "matplotlib >=3.8.0"
+]
+# Legacy UI: Streamlit-based web interface (deprecated)
 ui = [
     "streamlit >=1.45.1",
     "pillow >=11.3.0"
