--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "loguru >=0.7.3",
     "mcp[cli] >=1.12.4",
     "networkx >=3.5",
+    "markdown >=3.5.0",
     "opentelemetry-api >=1.37.0",
     "opentelemetry-sdk >=1.37.0",
     "prometheus_client >=0.22.1",
