--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -98,6 +98,13 @@ tasks:
             tests/unit/legacy/test_cli_help.py \
             tests/unit/test_collection_hygiene.py \
             -q
+      - |
+          uv run pytest \
+            tests/ui/desktop/test_component_smoke.py \
+            tests/ui/desktop/test_query_panel.py \
+            tests/ui/desktop/test_results_display.py \
+            tests/ui/desktop/test_desktop_integration.py \
+            -q
     desc: "Run lint, type check, and selected fast tests"
   unit:
     cmds:
