--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,7 @@ test = [
     "lxml >=4.9,<6",
     "pytest-httpx >=0.35.0",
     "pytest-bdd >=8.1.0",
+    "pytest-qt >=4.4.0",
     "pytest-benchmark >=4.0.0",
     "pytest-timeout >=2.3.1",
     "flake8 >=7.2.0",
@@ -183,6 +184,7 @@ dev = [
     "pytest-bdd >=8.1.0",
     "pytest-cov >=6.1.1",
     "pytest-httpx >=0.35.0",
+    "pytest-qt >=4.4.0",
     "pytest-timeout >=2.3.1",
     "flake8 >=7.2.0",
     "black >=24.4.0",
@@ -218,6 +220,7 @@ dev-minimal = [
     "pytest-bdd >=8.1.0",
     "pytest-cov >=6.1.1",
     "pytest-httpx >=0.35.0",
+    "pytest-qt >=4.4.0",
     "flake8 >=7.2.0",
     "black >=24.4.0",
     "mypy >=1.10.0",
