Add PySide6 desktop BDD coverage and mark legacy UI tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -m 'not slow and not pending' --timeout=60 --timeout-method=thread
+addopts = -m 'not slow and not pending and not legacy_streamlit' --timeout=60 --timeout-method=thread
 testpaths = tests/unit tests/integration tests/behavior tests/behavior/features tests/cli tests/ui
 bdd_features_base_dir = tests/behavior/features
 norecursedirs =
@@ -34,6 +34,7 @@ markers =
     user_workflows: behavior tests for end-to-end user workflows
     a2a_mcp: behavior tests for A2A MCP integration
     pending: placeholder behavior tests awaiting implementation
+    legacy_streamlit: deprecated Streamlit UI scenarios (opt-in)
     # LLM test complexity tiers (based on empirical baselines)
     llm_simple: LLM tests with simple queries (<10s expected, timeout 20s)
     llm_medium: LLM tests with research tasks (10-30s expected, timeout 60s)
