--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,10 @@ ui = [
     "streamlit >=1.45.1",
     "pillow >=11.3.0"
 ]
+# Terminal dashboard
+tui = [
+    "textual >=0.85.1",
+]
 # Vector search extension for DuckDB
 vss = [
     "duckdb-extension-vss >=1.3.0; python_version < '3.13'"
