feat: add search manifest CLI and docs for multi-repo workflows

--- a/docs/examples/autoresearch.toml
+++ b/docs/examples/autoresearch.toml
@@ -59,6 +59,20 @@ branches = [
     "main",
 ]
 history_depth = 50
+manifest = [
+    {
+        path = "/path/to/core-engine",
+        slug = "core-engine",
+        branches = ["main"],
+        namespace = "audit.core",
+    },
+    {
+        path = "/path/to/toolkit",
+        slug = "toolkit",
+        branches = ["develop"],
+        namespace = "audit.tools",
+    },
+]
 
 [storage.duckdb]
 path = "data/research.duckdb"
