--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -m 'not slow and not pending and not legacy_streamlit' --timeout=60 --timeout-method=thread
+addopts = -m 'not slow and not pending and not legacy_streamlit and not requires_ui'
 testpaths = tests/unit tests/integration tests/behavior tests/behavior/features tests/cli tests/ui
 bdd_features_base_dir = tests/behavior/features
 norecursedirs =
