Reduce deselection filters for core test suites

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -140,8 +140,10 @@ tasks:
           fi
     desc: "Run lint, type check, and selected fast tests"
   unit:
+    vars:
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - uv run pytest tests/unit -q
+      - uv run pytest tests/unit -m "{{.MARK_EXPR}}" -q
     desc: "Run unit tests with uv"
 
   integration:
@@ -154,8 +156,10 @@ tasks:
     desc: "Run integration tests with uv"
 
   behavior:
+    vars:
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - uv run pytest tests/behavior -q
+      - uv run pytest tests/behavior -m "{{.MARK_EXPR}}" -q
     desc: "Run BDD (behavior) tests with uv"
 
 
@@ -191,113 +195,49 @@ tasks:
 
   test:unit:
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - uv run pytest tests/unit -m 'not slow{{.EXTRA_MARKERS}}' -q
+      - uv run pytest tests/unit -m "{{.MARK_EXPR}}" -q
     desc: "Run unit tests with uv"
 
   test:integration:
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - >
-          uv run pytest tests/integration -m 'not slow{{.EXTRA_MARKERS}}' -q
+      - uv run pytest tests/integration -m "{{.MARK_EXPR}}" -q
     desc: "Run integration tests without slow scenarios with uv"
 
   test:behavior:
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - uv run pytest tests/behavior -m 'not slow{{.EXTRA_MARKERS}}' -q
+      - uv run pytest tests/behavior -m "{{.MARK_EXPR}}" -q
     desc: "Run BDD (behavior) tests with uv"
 
   test:all:
-    # Full run before releases. Includes slow tests but continues to skip
-    # UI and VSS scenarios unless the `ui` or `vss` extras are installed.
+    # Full run before releases. Includes slow tests; optional extras skip via
+    # fixtures when dependencies are unavailable.
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"True\" .MARK_EXPR}}"
     cmds:
-      - >
-          uv run pytest -m '(not slow or slow){{.EXTRA_MARKERS}}' -q
+      - uv run pytest -m "{{.MARK_EXPR}}" -q
     desc: "Run all tests including slow ones"
 
   test:fast:
-    # Minimal test run used for rapid iteration. Excludes slow tests and any
-    # requiring UI (`.[ui]`) or VSS (`.[vss]`) extras.
+    # Minimal test run used for rapid iteration. Excludes slow tests and relies
+    # on runtime skip fixtures to bypass missing extras.
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"not slow\" .MARK_EXPR}}"
     cmds:
-      - >
-          uv run pytest -m 'not slow{{.EXTRA_MARKERS}}'
+      - uv run pytest -m "{{.MARK_EXPR}}"
     desc: "Run tests excluding slow scenarios with uv"
 
   test:slow:
     vars:
-      EXTRAS: "{{.EXTRAS | default \"\"}}"
-      EXTRA_MARKERS: >-
-        {{if not (contains .EXTRAS "git")}} and not requires_git{{end}}\
-        {{if not (contains .EXTRAS "nlp")}} and not requires_nlp{{end}}\
-        {{if not (contains .EXTRAS "ui")}} and not requires_ui{{end}}\
-        {{if not (contains .EXTRAS "vss")}} and not requires_vss{{end}}\
-        {{if not (contains .EXTRAS "distributed")}} and not requires_distributed{{end}}\
-        {{if not (contains .EXTRAS "analysis")}} and not requires_analysis{{end}}\
-        {{if not (contains .EXTRAS "llm")}} and not requires_llm{{end}}\
-        {{if not (contains .EXTRAS "parsers")}} and not requires_parsers{{end}}\
-        {{if not (contains .EXTRAS "gpu")}} and not requires_gpu{{end}}
+      MARK_EXPR: "{{default \"slow\" .MARK_EXPR}}"
     cmds:
-      - >
-          uv run pytest -m 'slow{{.EXTRA_MARKERS}}'
-    desc: "Run slow tests while excluding extras that are not installed"
+      - uv run pytest -m "{{.MARK_EXPR}}"
+    desc: "Run slow tests; missing extras skip via fixtures"
 
   test:benchmarks:
     cmds:
